unstable test was updated for products for firefox