@@ -7,6 +7,7 @@ import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
+import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.Select;
 import org.openqa.selenium.support.ui.WebDriverWait;
 
@@ -16,34 +17,46 @@ public class CreateProductForm extends BasePage {
 
     @FindBy(css = ".modal-title#addProductModalLabel")
     public WebElement headerAddProduct;
+
     @FindBy(xpath = "//button[contains(text(), 'Создать продукт')]")
     public WebElement btnCreateProduct;
+
     @FindBy(css = "#nameError")
     public WebElement nameError;
+
     @FindBy(css = "#descriptionError")
     public WebElement descriptionError;
+
     @FindBy(css = "#categoryError")
     public WebElement categoryError;
+
     @FindBy(css = "input[type='text'].form-control#add-name")
     private WebElement productName;
+
     @FindBy(css = "input[type='text'].form-control#add-description")
     private WebElement productDescription;
+
     @FindBy(css = "input[type='text'].form-control#add-category")
     private WebElement productCategory;
+
     @FindBy(css = "input[type='text'].form-control#add-price")
     private WebElement productPrice;
+
     @FindBy(css = "input[type='number'].form-control#add-stock-quantity")
     private WebElement productQuantity;
-    @FindBy(css = "#add-supplier-id")
-    private WebElement supplierId;
+
     @FindBy(css = "input[type='file'].form-control#add-image-url")
     private WebElement productImage;
+
     @FindBy(css = "input[type='number'].form-control#add-weight")
     private WebElement productWeight;
+
     @FindBy(css = "input[type='text'].form-control#add-dimensions")
     private WebElement productDimensions;
+
     @FindBy(css = "input[type='text'].form-control#add-manufacturer")
     private WebElement productManufacturer;
+
     @FindBy(css = "#addProductModal .btn-close")
     private WebElement closeBtn;
 
@@ -53,6 +66,7 @@ public class CreateProductForm extends BasePage {
     }
 
     public void createProduct(ProductRequest product) {
+        waitUntilSuppliersLoaded();
         setProductName(product.getName())
                 .setProductCategory(product.getCategory())
                 .setProductDescription(product.getDescription())
@@ -63,7 +77,6 @@ public class CreateProductForm extends BasePage {
                 .setProductWeight(product.getWeight())
                 .setSupplierId(product.getSupplierId())
                 .setProductManufacturer(product.getManufacturer());
-
         UiUtils.scrollBottomRightCornerToElement(driver);
         clickProductCreate();
     }
@@ -149,81 +162,54 @@ public class CreateProductForm extends BasePage {
         return this;
     }
 
-    public CreateProductForm setSupplierId(String supplier) {
-        Select supplierSelect = new Select(waitUntilClickable(supplierId));
-        wait.until(d -> {
-            try {
-                supplierSelect.selectByValue(supplier);
-                return true;
-            } catch (Exception e) {
-                return false;
-            }
-        });
-
+    public CreateProductForm setSupplierId(String supplierId) {
+        waitUntilSuppliersLoaded();
+        By supplierDropdownLocator = By.cssSelector("#add-supplier-id");
+        WebElement dropdown = waitUntilVisible(driver.findElement(supplierDropdownLocator));
+        dropdown.click();
+        Select select = new Select(driver.findElement(supplierDropdownLocator));
+        select.selectByValue(supplierId);
         return this;
     }
 
-    public void waitUntilSuppliersLoaded(ProductPage productPage) {
-        Select supplierSelect = new Select(waitUntilClickable(supplierId));
-        waitUntilClickable(closeBtn);
-        WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(30));
-        wait.until(d -> {
+    public void waitUntilSuppliersLoaded() {
+        By supplierDropdownLocator = By.cssSelector("#add-supplier-id");
+        By addNewProductBtnLocator = By.cssSelector("#add-new-product-btn");
+
+        int maxRetries = 5;
+        WebDriverWait waitShort = new WebDriverWait(driver, Duration.ofSeconds(5));
+        WebDriverWait waitLong = new WebDriverWait(driver, Duration.ofSeconds(10));
+
+        for (int attempt = 1; attempt <= maxRetries; attempt++) {
             try {
-                boolean isLoaded = !supplierSelect.getOptions().isEmpty() && "Выберите поставщика".equals(supplierSelect.getOptions().getFirst().getText());
-                System.out.println(isLoaded);
-                if (isLoaded) {
-                    return true;
+                boolean ready = waitLong.until(d -> {
+                    try {
+                        WebElement dropdown = d.findElement(supplierDropdownLocator);
+                        Select supplierSelect = new Select(dropdown);
+                        return supplierSelect.getOptions().size() > 1
+                               && "Выберите поставщика".equals(supplierSelect.getOptions().get(0).getText());
+                    } catch (Exception e) {
+                        return false;
+                    }
+                });
+
+                if (ready) {
+                    return;
                 }
-                System.out.println("Closing");
-                closeBtn.click();
-                System.out.println("Closed");
-                productPage.clickAddProduct();
-                System.out.println("Opening");
-                UiUtils.waitVisible(headerAddProduct, driver);
-                System.out.println("Opened");
-                return false;
             } catch (Exception e) {
-                return false;
             }
-        });
+            try {
+                waitShort.until(ExpectedConditions.elementToBeClickable(closeBtn)).click();
+                waitShort.until(ExpectedConditions.invisibilityOfElementLocated(By.cssSelector("#addProductModal")));
+                WebElement addNewProductBtn = waitShort.until(ExpectedConditions.elementToBeClickable(addNewProductBtnLocator));
+                addNewProductBtn.click();
+                waitShort.until(ExpectedConditions.visibilityOfElementLocated(By.cssSelector("#addProductModal")));
+            } catch (Exception ex) {
+                System.out.println("Error during modal reopen: " + ex.getMessage());
+            }
+        }
+        throw new RuntimeException("Supplier dropdown did not load after " + maxRetries + " attempts");
     }
-//    public CreateProductForm setSupplierId(String supplierId) {
-//        WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(15));
-//
-//        JavascriptExecutor js = (JavascriptExecutor) driver;
-//        js.executeScript("loadSuppliers('#add-supplier-id');");
-//
-//        wait.until(ExpectedConditions.presenceOfElementLocated(By.cssSelector("#add-supplier-id")));
-//
-//        WebElement dropdown = driver.findElement(By.cssSelector("#add-supplier-id"));
-//        Select select = new Select(dropdown);
-//
-//        wait.until(ExpectedConditions.numberOfElementsToBeMoreThan(By.cssSelector("#add-supplier-id option"), 1));
-//
-//        int attempts = 0;
-//        while (attempts < 3) {
-//            try {
-//                List<WebElement> options = select.getOptions();
-//                for (WebElement option : options) {
-//                    if (option.getAttribute("value").equals(supplierId)) {
-//                        select.selectByValue(supplierId);
-//                        System.out.println("Selected supplier: " + supplierId);
-//                        return this;
-//                    }
-//                }
-//                break;
-//            } catch (StaleElementReferenceException e) {
-//                System.out.println("StaleElementReferenceException encountered, retrying...");
-//                attempts++;
-//                dropdown = driver.findElement(By.cssSelector("#add-supplier-id"));
-//                select = new Select(dropdown);
-//                wait.until(ExpectedConditions.numberOfElementsToBeMoreThan(By.cssSelector("#add-supplier-id option"), 1));
-//            }
-//        }
-//
-//        System.out.println("Supplier '" + supplierId + "' not found in the dropdown!");
-//        return this;
-//    }
 
     public CreateProductForm setProductImage(String imgPath) {
         if (StringUtils.isNotBlank(imgPath)) {
@@ -259,5 +245,4 @@ public class CreateProductForm extends BasePage {
     public void clickProductCreate() {
         waitUntilClickable(btnCreateProduct).click();
     }
-
 }
